--- a/public/index.html
+++ b/public/index.html
@@ -96,6 +96,7 @@ const audioLevel = document.getElementById("audioLevel");
 
 let audioContext;
 let isAudioProcessing = false;
+let currentAudioSource = null;
 
 // Update audio level visualizer
 function updateAudioLevel(level) {
@@ -134,6 +135,14 @@ ws.onmessage = (event) => {
       aiStatus.className = "status-item status-listening";
       console.log("✅ OpenAI session ready");
     }
+    else if (msg.type === "response.interrupt") {
+      // Stop any current audio playback immediately
+      stopCurrentAudio();
+      aiStatus.textContent = "⏹️ AI Interrupted - Listening...";
+      aiStatus.className = "status-item status-listening";
+      aiResponse.textContent = "AI responses will appear here...";
+      console.log("⏹️ AI response interrupted by user");
+    }
     else if (msg.type === "response.complete") {
       // Play complete response when OpenAI finishes
       aiStatus.textContent = "🔊 AI Speaking...";
@@ -143,10 +152,10 @@ ws.onmessage = (event) => {
       playCompleteAudio(msg.audioBuffers);
     }
     else if (msg.type === "input_audio_buffer.speech_started") {
-      console.log("🎤 Speech detected by OpenAI VAD");
+      console.log("🎤 User started speaking");
     }
     else if (msg.type === "input_audio_buffer.speech_stopped") {
-      console.log("🎤 Speech stopped - OpenAI will auto-process");
+      console.log("🎤 User stopped speaking - OpenAI will auto-process");
     }
     else if (msg.type === "input_audio_buffer.committed") {
       console.log("✅ OpenAI auto-committed audio");
@@ -162,11 +171,26 @@ ws.onmessage = (event) => {
   }
 };
 
+// Stop current audio playback immediately
+function stopCurrentAudio() {
+  if (currentAudioSource) {
+    try {
+      currentAudioSource.stop();
+      currentAudioSource = null;
+    } catch (error) {
+      // Ignore errors from stopping already finished audio
+    }
+  }
+}
+
 // Play complete audio response
 async function playCompleteAudio(audioBuffers) {
   if (!audioContext) {
     audioContext = new (window.AudioContext || window.webkitAudioContext)();
   }
+  
+  // Stop any current playback first
+  stopCurrentAudio();
   
   try {
     // Combine all audio buffers into one
@@ -176,20 +200,22 @@ async function playCompleteAudio(audioBuffers) {
     const audioBuffer = audioContext.createBuffer(1, combinedAudioData.length, 24000);
     audioBuffer.getChannelData(0).set(combinedAudioData);
     
-    const source = audioContext.createBufferSource();
-    source.buffer = audioBuffer;
-    source.connect(audioContext.destination);
-    source.onended = () => {
+    currentAudioSource = audioContext.createBufferSource();
+    currentAudioSource.buffer = audioBuffer;
+    currentAudioSource.connect(audioContext.destination);
+    currentAudioSource.onended = () => {
       aiStatus.textContent = "✅ AI Ready - Listening...";
       aiStatus.className = "status-item status-listening";
+      currentAudioSource = null;
       console.log("✅ Finished playing complete response");
     };
-    source.start();
+    currentAudioSource.start();
     
   } catch (error) {
     console.error("Error playing complete audio:", error);
     aiStatus.textContent = "✅ AI Ready - Listening...";
     aiStatus.className = "status-item status-listening";
+    currentAudioSource = null;
   }
 }
 
